<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/op_menu_title"
        app:showAsAction = "always">
        <menu>
            <item android:id="@+id/new_game"
                android:title="@string/op_menu_new_game"
                android:icon="@drawable/new_game"
                app:showAsAction = "never"/>
            <item android:id="@+id/ai_difficulty"
                android:title="@string/op_menu_ai_difficulty"
                android:icon="@drawable/ai_difficulty"
                app:showAsAction = "never"/>
            <item android:id="@+id/reset_games"
                android:title="@string/op_menu_reset_games"
                android:icon="@drawable/reset_games"
                app:showAsAction = "never"/>
            <item android:id="@+id/auto_new_game"
                android:title="@string/op_menu_auto_new_game"
                android:icon="@drawable/auto_new_game"
                app:showAsAction = "never"/>
            <item android:id="@+id/quit"
                android:title="@string/op_menu_quit"
                android:icon="@drawable/quit"
                app:showAsAction = "never"/>
        </menu>
    </item>

</menu>